k8s/api-gateway-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "otel-instrumentation"
      labels:
        app: api-gateway
    spec:
      containers:
      - image: nteduardschander/spring-petclinic-cloud-api-gateway:latest
        name: api-gateway
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 90
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          limits:
            memory: 1Gi
          # requests:
          #   cpu: 2000m
          #   memory: 1Gi
        ports:
        - containerPort: 8080
      restartPolicy: Always
status: {}
