k8s/customers-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: customers-service
  name: customers-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "otel-instrumentation"
      labels:
        app: customers-service
    spec:
      containers:
      - image: nteduardschander/spring-petclinic-cloud-customers-service:latest
        name: customers-service
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 90
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
