k8s/ingress-jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jaeger
  namespace: jaeger
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jaeger-query
              port:
                number: 16686
